Finish HTML markup for about section

--- a/index.html
+++ b/index.html
@@ -112,6 +112,40 @@
         </div>
       </section>
       <!-- End of Landing -->
+
+      <!-- About -->
+       <section class="about">
+        <div>
+            <i class="fa-solid fa-mobile"></i>
+            <h1>Esy to Order</h1>
+            <p>
+                To help you make informed decisions, 
+                we've compiled a beginner's guide to 
+                ordering coffee in a cafe.
+            </p>
+        </div>
+        <div>
+            <i class="fa-solid fa-truck"></i>
+            <h1>Fastest Delivery</h1>
+            <p>
+                Our professional, courteous couriers 
+                pick up and hand-deliver your order.
+                Members get a &#36;0 delivery fee.
+            </p>
+        </div>
+        <div>
+            <i class="fa-solid fa-mug-hot"></i>
+            <h1>Quality Coffee</h1>
+            <p>
+                Our beans are carefully selected 
+                from Kenya's best farm collectives, 
+                ensuring ethical sourcing and capturing 
+                the unique character of each region. 
+            </p>
+        </div>
+       </section>
+      <!-- End of About -->
+
     </div>
     <!-- End of Container -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
