Finish styling about section

--- a/index.html
+++ b/index.html
@@ -119,9 +119,8 @@
             <i class="fa-solid fa-mobile"></i>
             <h1>Esy to Order</h1>
             <p>
-                To help you make informed decisions, 
-                we've compiled a beginner's guide to 
-                ordering coffee in a cafe.
+                Order ahead using David's Coffee House app, 
+                grab your items and get back to your day!
             </p>
         </div>
         <div>
@@ -139,8 +138,7 @@
             <p>
                 Our beans are carefully selected 
                 from Kenya's best farm collectives, 
-                ensuring ethical sourcing and capturing 
-                the unique character of each region. 
+                ensuring ethical sourcing of each region. 
             </p>
         </div>
        </section>
