--- a/index.html
+++ b/index.html
@@ -144,6 +144,41 @@
        </section>
       <!-- End of About -->
 
+      <!-- Menu -->
+       <section class="menu">
+        <div class="menu-left">
+            <h3 class="main-heading">Discover</h3>
+            <h1>Our Menu</h1>
+            <p>
+                Single-origin coffees, ceremonial 
+                grade matcha, organic loose leaf 
+                tea, locally made pastries and 
+                grab-and-go provisions in a space 
+                created to inspire and engage.
+            </p>
+            <button type="button" class="menu-btn">
+                View Full Menu
+            </button>
+        </div>
+        <div class="menu-right">
+            <div class="menu-right-images">
+                <div class="menu-img-wrapper">
+                    <img src="images/image4.jpg">
+                </div>
+                <div class="menu-img-wrapper">
+                    <img src="images/image5.jpg">
+                </div>
+                <div class="menu-img-wrapper">
+                    <img src="images/image6.jpg">
+                </div>
+                <div class="menu-img-wrapper">
+                    <img src="images/image7.jpg">
+                </div>
+            </div>
+        </div>
+       </section>
+      <!-- End of Menu -->
+
     </div>
     <!-- End of Container -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
