Finish HTML markup for data section

--- a/index.html
+++ b/index.html
@@ -70,115 +70,149 @@
               <img src="images/image1.jpg" />
             </div>
             <div class="swiper-slide">
-                <img src="images/image2.jpg" />
-              </div>
-              <div class="swiper-slide">
-                <img src="images/image3.jpg" />
-              </div>
+              <img src="images/image2.jpg" />
+            </div>
+            <div class="swiper-slide">
+              <img src="images/image3.jpg" />
+            </div>
           </div>
           <div class="swiper-pagination"></div>
         </div>
         <div class="landing-contact">
-            <div class="details">
-                <i class="fa-solid fa-phone"></i>
-                <div>
-                    <span>(123) 456-7890</span>
-                    <span>
-                        We love our customers, 
-                        so feel free to contact us
-                        during normal business hours.
-                    </span>
-                </div>
+          <div class="details">
+            <i class="fa-solid fa-phone"></i>
+            <div>
+              <span>(123) 456-7890</span>
+              <span>
+                We love our customers, so feel free to contact us during normal
+                business hours.
+              </span>
             </div>
-            <div class="details">
-                <i class="fa-solid fa-location-dot"></i>
-                <div>
-                    <span>David's Coffee House</span>
-                    <span>
-                        1234 E Downtown St., Phoenix, Arizona 85001, USA
-                    </span>
-                </div>
+          </div>
+          <div class="details">
+            <i class="fa-solid fa-location-dot"></i>
+            <div>
+              <span>David's Coffee House</span>
+              <span> 1234 E Downtown St., Phoenix, Arizona 85001, USA </span>
             </div>
-            <div class="details">
-                <i class="fa-solid fa-clock"></i>
-                <div>
-                    <span>Open Monday-Friday</span>
-                    <span>
-                        Please Join Us, We are Available --> 
-                        8:00am - 9:00pm
-                    </span>
-                </div>
+          </div>
+          <div class="details">
+            <i class="fa-solid fa-clock"></i>
+            <div>
+              <span>Open Monday-Friday</span>
+              <span>
+                Please Join Us, We are Available --> 8:00am - 9:00pm
+              </span>
             </div>
+          </div>
         </div>
       </section>
       <!-- End of Landing -->
 
       <!-- About -->
-       <section class="about">
+      <section class="about">
         <div>
-            <i class="fa-solid fa-mobile"></i>
-            <h1>Esy to Order</h1>
-            <p>
-                Order ahead using David's Coffee House app, 
-                grab your items and get back to your day!
-            </p>
+          <i class="fa-solid fa-mobile"></i>
+          <h1>Esy to Order</h1>
+          <p>
+            Order ahead using David's Coffee House app, grab your items and get
+            back to your day!
+          </p>
         </div>
         <div>
-            <i class="fa-solid fa-truck"></i>
-            <h1>Fastest Delivery</h1>
-            <p>
-                Our professional, courteous couriers 
-                pick up and hand-deliver your order.
-                Members get a &#36;0 delivery fee.
-            </p>
+          <i class="fa-solid fa-truck"></i>
+          <h1>Fastest Delivery</h1>
+          <p>
+            Our professional, courteous couriers pick up and hand-deliver your
+            order. Members get a &#36;0 delivery fee.
+          </p>
         </div>
         <div>
-            <i class="fa-solid fa-mug-hot"></i>
-            <h1>Quality Coffee</h1>
-            <p>
-                Our beans are carefully selected 
-                from Kenya's best farm collectives, 
-                ensuring ethical sourcing of each region. 
-            </p>
+          <i class="fa-solid fa-mug-hot"></i>
+          <h1>Quality Coffee</h1>
+          <p>
+            Our beans are carefully selected from Kenya's best farm collectives,
+            ensuring ethical sourcing of each region.
+          </p>
         </div>
-       </section>
+      </section>
       <!-- End of About -->
 
       <!-- Menu -->
-       <section class="menu">
+      <section class="menu">
         <div class="menu-left">
-            <h3 class="main-heading">Discover</h3>
-            <h1>Our Menu</h1>
-            <p>
-                Single-origin coffees, ceremonial 
-                grade matcha, organic loose leaf 
-                tea, locally made pastries and 
-                grab-and-go provisions in a space 
-                created to inspire and engage.
-            </p>
-            <button type="button" class="menu-btn">
-                View Full Menu
-            </button>
+          <h3 class="main-heading">Discover</h3>
+          <h1>Our Menu</h1>
+          <p>
+            Single-origin coffees, ceremonial grade matcha, organic loose leaf
+            tea, locally made pastries and grab-and-go provisions in a space
+            created to inspire and engage.
+          </p>
+          <button type="button" class="menu-btn">View Full Menu</button>
         </div>
         <div class="menu-right">
-            <div class="menu-right-images">
-                <div class="menu-img-wrapper">
-                    <img src="images/image4.jpg">
-                </div>
-                <div class="menu-img-wrapper">
-                    <img src="images/image5.jpg">
-                </div>
-                <div class="menu-img-wrapper">
-                    <img src="images/image6.jpg">
-                </div>
-                <div class="menu-img-wrapper">
-                    <img src="images/image7.jpg">
-                </div>
+          <div class="menu-right-images">
+            <div class="menu-img-wrapper">
+              <img src="images/image4.jpg" />
             </div>
+            <div class="menu-img-wrapper">
+              <img src="images/image5.jpg" />
+            </div>
+            <div class="menu-img-wrapper">
+              <img src="images/image6.jpg" />
+            </div>
+            <div class="menu-img-wrapper">
+              <img src="images/image7.jpg" />
+            </div>
+          </div>
         </div>
-       </section>
+      </section>
       <!-- End of Menu -->
 
+      <!-- Data -->
+      <section class="data">
+        <div>
+            <div class="icon-wrapper">
+                <i class="fa-solid fa-mug-hot"></i>
+                <span class="icon-bg"></span>
+            </div>
+            <span class="num" data-val="350">
+                0
+            </span>
+            <span class="info">Coffee Branches</span>
+        </div>
+        <div>
+            <div class="icon-wrapper">
+                <i class="fa-solid fa-mug-hot"></i>
+                <span class="icon-bg"></span>
+            </div>
+            <span class="num" data-val="90">
+                0
+            </span>
+            <span class="info">Number of Awards</span>
+        </div>
+        <div>
+            <div class="icon-wrapper">
+                <i class="fa-solid fa-mug-hot"></i>
+                <span class="icon-bg"></span>
+            </div>
+            <span class="num" data-val="1240">
+                0
+            </span>
+            <span class="info">Happy Customers</span>
+        </div>
+        <div>
+            <div class="icon-wrapper">
+                <i class="fa-solid fa-mug-hot"></i>
+                <span class="icon-bg"></span>
+            </div>
+            <span class="num" data-val="750">
+                0
+            </span>
+            <span class="info">Staff Members</span>
+        </div>
+      </section>
+      <!-- End of Data -->
     </div>
     <!-- End of Container -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
