Finish HTML markup for customers section

--- a/index.html
+++ b/index.html
@@ -213,6 +213,87 @@
         </div>
       </section>
       <!-- End of Data -->
+
+      <!-- Customers -->
+      <section class="customers">
+        <div class="customers-banner">
+            <h3 class="main-heading">Testimonials</h3>
+            <h1>What Customers Say About Us</h1>
+        </div>
+        <div class="clients">
+            <div class="client">
+                <p>
+                    My favorite espresso. 
+                    Anyone who enjoys a good 
+                    espresso should definitely 
+                    order their espresso!! And 
+                    its clean, like all their 
+                    coffee; no added poisons. 
+                    Can't beat that. Enjoy!!
+                </p>
+                <div>
+                    <img src="images/client1.jpg">
+                    <span>Jay Gatsby</span>
+                </div>
+            </div>
+            <div class="client">
+                <p>
+                    Your Kahawa Decaf coffee is 
+                    the best decaf I've ever tasted. 
+                    I really like the full-bodied, 
+                    low-acid, espresso type of coffee, 
+                    and it seems hard to find in a decaf 
+                    coffee. So glad to have discovered 
+                    David's Coffee House.
+                </p>
+                <div>
+                    <img src="images/client2.jpg">
+                    <span>Peter Parker</span>
+                </div>
+            </div>
+            <div class="client">
+                <p>
+                    Have you ever wished that coffee 
+                    could taste as good as the aroma? 
+                    Mostly I am disappointed. But your 
+                    coffee tastes as good as it smells. 
+                    It's the best coffee I have ever 
+                    had... period!
+                </p>
+                <div>
+                    <img src="images/client3.jpg">
+                    <span>Dorian Grey</span>
+                </div>
+            </div>
+            <div class="client">
+                <p>
+                    Your coffee hits the spot every time. 
+                    Thank you for the experience of pure, 
+                    delicious coffee masterfully roasted! 
+                    I will never purchase any other and I 
+                    will spread the word!
+                </p>
+                <div>
+                    <img src="images/client4.jpg">
+                    <span>Jane Eyre</span>
+                </div>
+            </div>
+            <div class="client">
+                <p>
+                    It was worth the 2 hour drive 
+                    to get the best roasted coffee 
+                    in Phoenix! Thanks for the very 
+                    interesting chat about...coffee! 
+                    We'll be back.
+                </p>
+                <div>
+                    <img src="images/client5.jpg">
+                    <span>Mary Poppins</span>
+                </div>
+            </div>
+        </div>
+      </section>
+      <!-- End of Customers -->
     </div>
     <!-- End of Container -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
