Finish styling customers section

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
       <section class="customers">
         <div class="customers-banner">
             <h3 class="main-heading">Testimonials</h3>
-            <h1>What Customers Say About Us</h1>
+            <h1>What Customers Say</h1>
         </div>
         <div class="clients">
             <div class="client">
@@ -267,11 +267,9 @@
             </div>
             <div class="client">
                 <p>
-                    Your coffee hits the spot every time. 
-                    Thank you for the experience of pure, 
-                    delicious coffee masterfully roasted! 
-                    I will never purchase any other and I 
-                    will spread the word!
+                    Your coffee is amazing! 
+                    I'm so glad to have found 
+                    you! Keep it up!
                 </p>
                 <div>
                     <img src="images/client4.jpg">
