--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
       <!-- Footer -->
       <footer>
         <p class="copyright">
-          &copy; All Rights Reserved. 2023. Made by Code And Create
+          &copy; All Rights Reserved. 2024. Hand Coded by 
         </p>
       </footer>
       <!-- End of Footer -->
