Make webpage responsive

--- a/index.html
+++ b/index.html
@@ -172,44 +172,36 @@
       <!-- Data -->
       <section class="data">
         <div>
-            <div class="icon-wrapper">
-                <i class="fa-solid fa-mug-hot"></i>
-                <span class="icon-bg"></span>
-            </div>
-            <span class="num" data-val="350">
-                0
-            </span>
-            <span class="info">Coffee Branches</span>
+          <div class="icon-wrapper">
+            <i class="fa-solid fa-mug-hot"></i>
+            <span class="icon-bg"></span>
+          </div>
+          <span class="num" data-val="350"> 0 </span>
+          <span class="info">Coffee Branches</span>
         </div>
         <div>
-            <div class="icon-wrapper">
-                <i class="fa-solid fa-mug-hot"></i>
-                <span class="icon-bg"></span>
-            </div>
-            <span class="num" data-val="90">
-                0
-            </span>
-            <span class="info">Number of Awards</span>
+          <div class="icon-wrapper">
+            <i class="fa-solid fa-mug-hot"></i>
+            <span class="icon-bg"></span>
+          </div>
+          <span class="num" data-val="90"> 0 </span>
+          <span class="info">Number of Awards</span>
         </div>
         <div>
-            <div class="icon-wrapper">
-                <i class="fa-solid fa-mug-hot"></i>
-                <span class="icon-bg"></span>
-            </div>
-            <span class="num" data-val="1240">
-                0
-            </span>
-            <span class="info">Happy Customers</span>
+          <div class="icon-wrapper">
+            <i class="fa-solid fa-mug-hot"></i>
+            <span class="icon-bg"></span>
+          </div>
+          <span class="num" data-val="1240"> 0 </span>
+          <span class="info">Happy Customers</span>
         </div>
         <div>
-            <div class="icon-wrapper">
-                <i class="fa-solid fa-mug-hot"></i>
-                <span class="icon-bg"></span>
-            </div>
-            <span class="num" data-val="750">
-                0
-            </span>
-            <span class="info">Staff Members</span>
+          <div class="icon-wrapper">
+            <i class="fa-solid fa-mug-hot"></i>
+            <span class="icon-bg"></span>
+          </div>
+          <span class="num" data-val="750"> 0 </span>
+          <span class="info">Staff Members</span>
         </div>
       </section>
       <!-- End of Data -->
@@ -217,78 +209,64 @@
       <!-- Customers -->
       <section class="customers">
         <div class="customers-banner">
-            <h3 class="main-heading">Testimonials</h3>
-            <h1>What Customers Say</h1>
+          <h3 class="main-heading">Testimonials</h3>
+          <h1>What Customers Say</h1>
         </div>
         <div class="clients">
-            <div class="client">
-                <p>
-                    My favorite espresso. 
-                    Anyone who enjoys a good 
-                    espresso should definitely 
-                    order their espresso!! And 
-                    its clean, like all their 
-                    coffee; no added poisons. 
-                    Can't beat that. Enjoy!!
-                </p>
-                <div>
-                    <img src="images/client1.jpg">
-                    <span>Jay Gatsby</span>
-                </div>
+          <div class="client">
+            <p>
+              My favorite espresso. Anyone who enjoys a good espresso should
+              definitely order their espresso!! And its clean, like all their
+              coffee; no added poisons. Can't beat that. Enjoy!!
+            </p>
+            <div>
+              <img src="images/client1.jpg" />
+              <span>Jay Gatsby</span>
             </div>
-            <div class="client">
-                <p>
-                    Your Kahawa Decaf coffee is 
-                    the best decaf I've ever tasted. 
-                    I really like the full-bodied, 
-                    low-acid, espresso type of coffee, 
-                    and it seems hard to find in a decaf 
-                    coffee. So glad to have discovered 
-                    David's Coffee House.
-                </p>
-                <div>
-                    <img src="images/client2.jpg">
-                    <span>Peter Parker</span>
-                </div>
+          </div>
+          <div class="client">
+            <p>
+              Your Kahawa Decaf coffee is the best decaf I've ever tasted. I
+              really like the full-bodied, low-acid, espresso type of coffee,
+              and it seems hard to find in a decaf coffee. So glad to have
+              discovered David's Coffee House.
+            </p>
+            <div>
+              <img src="images/client2.jpg" />
+              <span>Peter Parker</span>
             </div>
-            <div class="client">
-                <p>
-                    Have you ever wished that coffee 
-                    could taste as good as the aroma? 
-                    Mostly I am disappointed. But your 
-                    coffee tastes as good as it smells. 
-                    It's the best coffee I have ever 
-                    had... period!
-                </p>
-                <div>
-                    <img src="images/client3.jpg">
-                    <span>Dorian Grey</span>
-                </div>
+          </div>
+          <div class="client">
+            <p>
+              Have you ever wished that coffee could taste as good as the aroma?
+              Mostly I am disappointed. But your coffee tastes as good as it
+              smells. It's the best coffee I have ever had... period!
+            </p>
+            <div>
+              <img src="images/client3.jpg" />
+              <span>Dorian Grey</span>
             </div>
-            <div class="client">
-                <p>
-                    Your coffee is amazing! 
-                    I'm so glad to have found 
-                    you! Keep it up!
-                </p>
-                <div>
-                    <img src="images/client4.jpg">
-                    <span>Jane Eyre</span>
-                </div>
+          </div>
+          <div class="client">
+            <p>
+              Your coffee is amazing! I'm so glad to have found you! Keep it up!
+            </p>
+            <div>
+              <img src="images/client4.jpg" />
+              <span>Jane Eyre</span>
             </div>
-            <div class="client">
-                <p>
-                    It was worth the 2 hour drive 
-                    to get the best roasted coffee 
-                    in Phoenix! Thanks for the very 
-                    interesting chat about...coffee! 
-                    We'll be back.
-                </p>
-                <div>
-                    <img src="images/client5.jpg">
-                    <span>Mary Poppins</span>
-                </div>
+          </div>
+          <div class="client">
+            <p>
+              It was worth the 2 hour drive to get the best roasted coffee in
+              Phoenix! Thanks for the very interesting chat about...coffee!
+              We'll be back.
+            </p>
+            <div>
+              <img src="images/client5.jpg" />
+              <span>Mary Poppins</span>
             </div>
+          </div>
         </div>
       </section>
       <!-- End of Customers -->
@@ -319,7 +297,7 @@
       <!-- Footer -->
       <footer>
         <p class="copyright">
-          &copy; All Rights Reserved. 2024. Hand Coded by 
+          &copy; All Rights Reserved. 2024. Hand Coded by David Meskhishvili
         </p>
       </footer>
       <!-- End of Footer -->
